--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
             <div class="portfolio_slide">
 <!--               <h1>Step by step...</h1>-->
                 <div class="thumbs">
-                  <div><a href="" title="CV"></a></div>
-                  <div><a href="" title="Tribute"></a></div>
+                  <div><a href="https://codepen.io/moicano/pen/wrQNrm" title="CV"></a></div>
+                  <div><a href="https://codepen.io/moicano/pen/RjWMXM" title="Tribute"></a></div>
                   <div>
                       <h3>Now look...</h3>
                       <p>
@@ -87,9 +87,9 @@
                       Just click on project.
                       </p>
                   </div>
-                  <div><a href="" title="Portfolio"></a></div>
-                  <div><a href="" title="Coach"></a></div>
-                  <div><a href="https://github.com/mocano6/ZlatanQuotes" title="ZLATAN"></a></div>
+                  <div><a href="https://codepen.io/moicano/pen/mBwoLJ" title="Blog"></a></div>
+                  <div><a href="https://mocano6.github.io/portfolio/" title="Portfolio"></a></div>
+                  <div><a href="https://mocano6.github.io/ZlatanQuotes/" title="ZLATAN"></a></div>
                 </div>
             </div>
           </div>
