--- a/index.html
+++ b/index.html
@@ -3,129 +3,137 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FukaszŁerszt</title>
+    <title>luq</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://use.fontawesome.com/releases/v5.0.4/css/all.css" rel="stylesheet">
 </head>
 <body>
-   <div id="bar">
-      <span></span>
-      <div id="logo">
+                                       
+  <!-- Navigation A -->
+  <span class="hamburger-a"></span>
+  <nav class="nav-a" class="grid">
+   <div id="logo">
           <img src="img/tactx.png" alt="logo">
       </div>
-      <div id="menu">
+    <div id="menu">
         <ul>
             <a href="#"><li>Home</li></a>
-            <a href="#skills"><li>Skills</li></a>
-            <a href="#portfolio"><li>Projects</li></a>
-            <a href="#contact"><li>Contact</li></a>
-            <a href="#"hidden><li>Livestyle</li></a>
-            <a href="#"hidden><li>Football</li></a>
+            <a href="#section-b"><li>Skills</li></a>
+            <a href="#"><li>Projects</li></a>
+            <!--Link do projektów^ dodaj-->
+            <a href="#section-d"><li>Contact</li></a>
+            <a href="#" hidden><li>Livestyle</li></a>
+            <a href="#" hidden><li>Football</li></a>
         </ul>
       </div>
-           <div id="social_media">
-               <ul>
-                   <li><a target="_blank" title="Twitter" alt="twetter" href="https://twitter.com/lferszt" class="fab fa-twitter"></a>
-                   </li>
-                   <li><a target="_blank" title="Facebook" alt="facebook" href="https://www.facebook.com/lferszt/" class="fab fa-facebook-f" aria-hidden="true"></a>
-                   </li>
-                   <li><a target="_blank" title="LinkedIn" alt="linkedin" href="https://www.linkedin.com/in/lukasz-ferszt-73678498/" class="fab fa-linkedin-in" aria-hidden="true"></a>
-                   </li>
-                   <li><a target="_blank" title="GitHub" alt="github" href="https://github.com/mocano6" class="fab fa-github" aria-hidden="true"></a>
-                   </li>
-               </ul>
-           </div>
-   </div>
-   <div class="content">
-                                        <!--TOP PART-->
-     <div class="container">
-         <div id="hello">
-            <h1>Hello!</h1>
-            <p>I am glad you are here.</p>
+  </nav>
+     <!-- Header Showcase -->
+<header id="showcase" class="grid">
+  <div class="bg-image"></div>
+  <div class="content-wrap">
+    <h1>Hello!</h1>
+    <p>I am glad you are here.</p>
+  </div>
+</header>
+
+<!-- Main Area -->
+<main id="main">
+  <!-- Section A -->
+  <section id="section-a" class="grid">
+    <div class="content-wrap">
+      <!--<h2 class="content-title"></h2>-->
+      <div class="content-text">
+        <p>Beneath this task there is more than just code. Beneath this task there is an idea... and ideas are bulletproof.</p>
+      </div>
+    </div>
+  </section>
+
+  <!-- Section B -->
+  <section id="section-b" class="grid">
+    <ul>
+      <li>
+        <div class="card">
+          <img src="https://static.pexels.com/photos/17840/pexels-photo.jpg" alt="">
+          <div class="card-content">
+            <h3 class="card-title">Yes...</h3>
+            <p>
+                 Technical skills are important but...<br>
+                 The moest important part of my transformation as a web developer, was create teaching strategy.<br>
+                 Now im able to keep discipline to work on most productive way. I am able to care about my cognitive ability, keep my diet which make me best version of myself and keep away from distractors.<br>
+                 <br>
+                 So if I will be able keep thinks like that, progres will be side effect.
+            </p>
+          </div>
         </div>
-        <div id="mainContainer">
-            <div></div>
+      </li>
+      <li>
+        <div class="card">
+          <img src="https://static.pexels.com/photos/92904/pexels-photo-92904.jpeg" alt="">
+          <div class="card-content">
+            <h3 class="card-title">Coding</h3>
+            <p>
+                I am some kind kind of translator who is able to communicate with computer. I am also able to create content and make them smooth and sexy.
+            </p>
+          </div>
         </div>
-      </div>
-                                        <!--SKILLS-->
-      <div class="container">
-          <div id="skills">
-              <span>Beneath this task there is more than just code. Beneath this task there is an idea... and ideas are bulletproof.</span>
-              <p class="my_skills">Tools i learned</p>
-              <a href="#"><img src="img/skills/html.png" alt=""></a>
-              <a href="#"><img src="img/skills/css.png" alt=""></a>
-              <a href="#"><img src="img/skills/js.png" alt=""></a>
-              <a href="#"><img src="img/skills/jquery.gif" alt=""></a>
-              <a href="#"><img src="img/skills/ajax.png" alt=""></a>
-              <a href="#"><img src="img/skills/bootstrap.png" alt=""></a>
-              <a href="#"><img src="img/skills/git.png" alt=""></a>
-              <p class="my_skills" id="my_skills_bottom">How and what i learned available on<a href="https://teamtreehouse.com/ukaszferszt">treehouse.com</a>profile</p>
+      </li>
+      <li>
+        <div class="card">
+          <img src="https://static.pexels.com/photos/261628/pexels-photo-261628.jpeg" alt="">
+          <div class="card-content">
+            <h3 class="card-title">UX and Graphic</h3>
+            <p>
+                Technology has outpaced the traditional way of comunicate. The ongoing evolution means we have to constantly redefine our way of speaking and sending information.
+                So people like Me was absolutly indispensable beain able adjust to this days world.<br>
+                Those words is not a expresion of big ego but objective truth, that every homosapiens is bein able to see.
+            </p>
           </div>
-          <div id="skill_sentence">
-              
-               <h3>Yeah!<br>
-               Those skills are cool...<br></h3>
-               <p>But the moest important part of my transformation as a web developer, was create teaching strategy. Now im able to keep discipline to work on most productive way. I am able to care about my cognitive ability, keep my diet which make me best version of myself and keep away from distractors.<br><br>
-               So if I will be able keep thinks like that, progres will be side effect.</p>
-          </div>
-      </div>
-                                      <!--PORTFOLIO-->
-      <div class="container">
-          <div id="portfolio">
-            <div class="portfolio_slide">
-<!--               <h1>Step by step...</h1>-->
-                <div class="thumbs">
-                  <div><a href="https://codepen.io/moicano/pen/wrQNrm" title="CV"></a></div>
-                  <div><a href="https://codepen.io/moicano/pen/RjWMXM" title="Tribute"></a></div>
-                  <div>
-                      <h3>Now look...</h3>
-                      <p>
-                      Step by step since september 2017 I was start to learn programming by myself.<br>
-                      Mainly I was focus on theoretical knowledge, but I was do some projects, just for practice.<br>
-                      And actually this is fruit of this months.<br><br>
-                      Maybe you want to check projects code?<br>
-                      Just click on project.
-                      </p>
-                  </div>
-                  <div><a href="https://codepen.io/moicano/pen/mBwoLJ" title="Blog"></a></div>
-                  <div><a href="https://mocano6.github.io/portfolio/" title="Portfolio"></a></div>
-                  <div><a href="https://mocano6.github.io/ZlatanQuotes/" title="ZLATAN"></a></div>
-                </div>
-            </div>
-          </div>
-      </div>
-                                      <!--CONTACT-->
-      <div class="container">
-		  <div id="contact">
-			<h2>Contact Me</h2>
-		<form>
-			<div>
-				<input type="text" name="" required="">
-				<label>Name</label>
-			</div>
-			<div>
-				<input type="email" name="" required="">
-				<label>Email</label>
-			</div>
-			<div>
-				<input type="text" name="" required="">
-				<label>Subject</label>
-			</div>
-			<div>
-				<textarea required=""></textarea>
-				<label>Message</label>
-			</div>
-			<input type="submit" name="" value="Submit">
-		</form>
-		  </div>
-      </div>
-                                            <!--FOOTER-->
-      <div id="footer">
+        </div>
+      </li>
+    </ul>
+  </section>
+
+  <!-- Section C -->
+  <section id="section-c" class="grid">
+    <div class="content-wrap">
+     <h2 class="content-title">My job</h2>
+     <p>
+        Project with source was available on <a href="https://github.com/mocano6">github</a> and <a href="https://codepen.io/moicano/">CodePen</a>
+      </p>
+    </div>
+  </section>
+
+  <!-- Section D -->
+  <section id="section-d" class="grid">
+    <div class="box">
+      <h2 class="content-title">Contact</h2>
+      <p>
+          Now I am avalible to start new carere.<br>
+          Just send me message and we can start create something awesome.
+      </p>
+      <p><i class="far fa-envelope"></i> lukaszferszt@gmail.com</p>
+      <p><i class="fas fa-mobile"></i> 791 036 976</p>
+    </div>
+    <div class="box">
+      <h2 class="content-title">Now just look...</h2>
        <p>
-           &copy; Łukasz Ferszt 2018
+           Step by step since september 2017 I was start to learn programming by myself.<br>
+           Mainly I was focus on theoretical knowledge, but I was do some projects, just for practice.<br>
+           And actually this is fruit of this months of work.<br>
+           <br>           
+           In social live in this moment I do not exist because I am just learn to code and improve my cognitive skills, work as a football coach and I also work on my body.
        </p>
-   </div>
-   </div>
-    <script src="script.js"></script>
+    </div>
+  </section>
+</main>
+
+<!-- Footer -->
+<footer id="main-footer" class="grid">
+  <div><p>&copy;<a href="https://github.com/mocano6" target="_blank"> Łukasz Ferszt</a></p></div>
+</footer>
+
+
+<script src="script.js"></script>
+
 </body>
 </html>
